bk_ida/gccida/c0/find_reloads_address
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:5033:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:5038:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:5047:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:5051:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // [rsp+3Ch] [rbp-E4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:5052:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // [rsp+48h] [rbp-D8h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:5054:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v21; // [rsp+74h] [rbp-ACh] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:5055:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v22; // [rsp+78h] [rbp-A8h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:5059:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type typea; // [rsp+E8h] [rbp-38h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:5064:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+108h] [rbp-18h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:5096:34: error: use of undeclared identifier 'machine_mode'
if ( !strict_memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)tem), tem->fld[0].rtx) ) 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:5096:49: error: expected expression
if ( !strict_memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)tem), tem->fld[0].rtx) ) 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:5101:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)tem), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:5101:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)tem), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:5113:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)tem), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:5113:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)tem), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:5125:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)tem), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:5125:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)tem), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:5168:31: error: use of undeclared identifier 'this_insn_1'; did you mean 'this_insn'?
&& !regno_clobbered_p( regno, this_insn_1, modea, 0) ) 
                              ^~~~~~~~~~~
                              this_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:181:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/reload.c:5178:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)ada), 
  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address/src/obj/reload.o] Error 1
